--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "env": { "browser": true },
+  "env": { "browser": true, "jest": true },
   "extends": "airbnb",
   "parser": "babel-eslint",
   "rules": {
