--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,9 @@
   "rules": {
     "arrow-parens": 0,
     "comma-dangle": [2, "never"],
+    "curly": 0,
     "function-paren-newline": 0,
+    "object-curly-newline": 0,
     "react/jsx-filename-extension": 0,
     "react/no-array-index-key": 0,
     "react/no-multi-comp": 0,
