--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "comma-dangle": [2, "never"],
     "curly": 0,
     "function-paren-newline": 0,
+    "no-confusing-arrow": 0,
     "object-curly-newline": 0,
     "react/jsx-filename-extension": 0,
     "react/no-array-index-key": 0,
