--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
-  "env": { "browser": true, "jest": true },
+  "env": {
+    "browser": true,
+    "jest": true
+  },
   "extends": "airbnb",
   "parser": "babel-eslint",
   "rules": {
