--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "license": "MIT",
   "name": "siaq",
-  "description": "State management for React based on the new context API.",
+  "description": "Stores as components. Simple state management for React based on context.",
   "version": "0.0.4",
   "main": "dist/index.js",
   "repository": {
