--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   "parser": "babel-eslint",
   "rules": {
     "arrow-parens": 0,
+    "class-methods-use-this": 0,
     "comma-dangle": [2, "never"],
     "curly": 0,
     "function-paren-newline": 0,
