--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lint": "eslint src test example",
     "flow": "flow",
     "test": "jest test",
+    "coverage": "yarn test --coverage && open -a 'Chrome' coverage/lcov-report/index.html",
     "prebuild": "rm -rf lib",
     "build": "NODE_ENV=production babel src --out-dir lib"
   },
