--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "function-paren-newline": 0,
     "no-confusing-arrow": 0,
     "object-curly-newline": 0,
+    "react/jsx-closing-bracket-location": 0,
     "react/jsx-filename-extension": 0,
     "react/no-array-index-key": 0,
     "react/no-multi-comp": 0,
