--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "license": "MIT",
   "name": "qaf",
   "description": "Stores as components. Simple state management for React based on context.",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
@@ -35,7 +35,7 @@
     "lint": "eslint src test example",
     "flow": "flow",
     "test": "jest test",
-    "coverage": "yarn test --coverage && open -a 'Chrome' coverage/lcov-report/index.html",
+    "coverage": "yarn test --coverage && open -a Chrome coverage/lcov-report/index.html",
     "prebuild": "rm -rf lib",
     "build": "NODE_ENV=production babel src --out-dir lib"
   },
