--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "parcel-bundler": "1.9.2",
     "react": "16.4.1",
     "react-dom": "16.4.1",
-    "react-test-renderer": "16.4.1",
-    "styled-components": "3.3.2"
+    "react-test-renderer": "16.4.1"
   },
   "scripts": {
     "prestart": "rm -rf .cache",
