--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "react/jsx-filename-extension": 0,
     "react/no-array-index-key": 0,
     "react/no-multi-comp": 0,
-    "react/prefer-stateless-function": 0
+    "react/prefer-stateless-function": 0,
+    "react/prop-types": 0
   }
 }
