--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,9 @@
     "comma-dangle": [2, "never"],
     "function-paren-newline": 0,
     "no-confusing-arrow": 0,
+    "no-mixed-operators": 0,
     "object-curly-newline": 0,
+    "react/jsx-closing-bracket-location": 0,
     "react/jsx-filename-extension": 0,
     "react/prop-types": 0
   }
