--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.9.1",
+    "gh-pages": "1.2.0",
     "jest": "23.1.0",
     "parcel-bundler": "1.9.2",
     "react": "16.4.1",
@@ -29,14 +30,18 @@
     "react-test-renderer": "16.4.1"
   },
   "scripts": {
-    "prestart": "rm -rf .cache",
-    "start": "parcel examples/index.html --out-dir build --open",
+    "prestart": "rm -rf .cache dev",
+    "start": "parcel examples/index.html --out-dir dev --open",
     "lint": "eslint src test examples",
-    "flow": "flow",
     "test": "jest test",
-    "coverage": "yarn test --coverage && open -a Chrome coverage/lcov-report/index.html",
+    "coverage": "yarn test --coverage",
+    "postcoverage": "open -a Chrome coverage/lcov-report/index.html",
     "prebuild": "rm -rf lib",
-    "build": "NODE_ENV=production babel src --out-dir lib"
+    "build": "NODE_ENV=production babel src --out-dir lib",
+    "prebuild:examples": "rm -rf build",
+    "build:examples": "NODE_ENV=production parcel build examples/index.html --out-dir build --public-url /qaf/",
+    "predeploy": "yarn build:examples",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
