--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint-plugin-react": "7.9.1",
     "gh-pages": "1.2.0",
     "jest": "23.1.0",
+    "page": "1.8.6",
+    "pagify-it": "0.0.8",
     "parcel-bundler": "1.9.2",
     "react": "16.4.1",
     "react-dom": "16.4.1",
