--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react": ">=16.3.0"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
     "babel-eslint": "8.2.3",
+    "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
@@ -29,7 +29,9 @@
     "parcel-bundler": "1.9.2",
     "react": "16.4.1",
     "react-dom": "16.4.1",
-    "react-test-renderer": "16.4.1"
+    "react-test-renderer": "16.4.1",
+    "rollup": "0.61.1",
+    "rollup-plugin-babel": "3.0.4"
   },
   "scripts": {
     "prestart": "rm -rf .cache dev",
@@ -39,10 +41,10 @@
     "coverage": "yarn test --coverage",
     "postcoverage": "open -a Chrome coverage/lcov-report/index.html",
     "prebuild": "rm -rf lib",
-    "build": "NODE_ENV=production babel src --out-dir lib",
-    "prebuild:examples": "rm -rf build",
-    "build:examples": "NODE_ENV=production parcel build examples/index.html --out-dir build --public-url /qaf/",
-    "predeploy": "yarn build:examples",
+    "build": "rollup -c",
+    "preexamples": "rm -rf build",
+    "examples": "parcel build examples/index.html --out-dir build --public-url /qaf/",
+    "predeploy": "yarn examples",
     "deploy": "gh-pages -d build"
   },
   "jest": {
