--- a/.eslintrc
+++ b/.eslintrc
@@ -9,9 +9,13 @@
     "arrow-parens": 0,
     "comma-dangle": [2, "never"],
     "function-paren-newline": 0,
+    "implicit-arrow-linebreak": 0,
+    "jsx-a11y/label-has-for": 0,
     "no-confusing-arrow": 0,
     "object-curly-newline": 0,
+    "react/button-has-type": 0,
     "react/jsx-filename-extension": 0,
+    "react/jsx-one-expression-per-line": 0,
     "react/prop-types": 0
   }
 }
