--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
     "eslint": "5.0.0",
     "eslint-config-airbnb": "17.0.0",
     "eslint-plugin-import": "2.12.0",
