--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "implicit-arrow-linebreak": 0,
     "jsx-a11y/label-has-for": 0,
     "no-confusing-arrow": 0,
+    "no-nested-ternary": 0,
     "object-curly-newline": 0,
     "react/button-has-type": 0,
     "react/jsx-filename-extension": 0,
