--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "babel-preset-stage-0": "6.24.1",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
-    "eslint": "5.0.0",
+    "eslint": "5.0.1",
     "eslint-config-airbnb": "17.0.0",
     "eslint-plugin-import": "2.13.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.10.0",
     "gh-pages": "1.2.0",
-    "jest": "23.1.0",
+    "jest": "23.2.0",
     "page": "1.8.6",
     "pagify-it": "0.0.13",
     "parcel-bundler": "1.9.3",
@@ -33,7 +33,8 @@
     "react-dom": "16.4.1",
     "react-test-renderer": "16.4.1",
     "rollup": "0.61.2",
-    "rollup-plugin-babel": "3.0.5"
+    "rollup-plugin-babel": "3.0.5",
+    "styled-components": "3.3.3"
   },
   "scripts": {
     "prestart": "rm -rf .cache dev",
