--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "scripts": {
     "prestart": "rm -rf .cache dev",
-    "start": "parcel examples/index.html --out-dir dev --open",
+    "start": "parcel examples/App/index.html --out-dir dev --open",
     "lint": "eslint src test examples",
     "test": "jest test",
     "coverage": "yarn test --coverage",
@@ -46,7 +46,7 @@
     "prebuild": "rm -rf lib",
     "build": "rollup -c",
     "preexamples": "rm -rf build",
-    "examples": "NODE_ENV=production parcel build examples/index.html --out-dir build --public-url /qaf/",
+    "examples": "NODE_ENV=production parcel build examples/App/index.html --out-dir build --public-url /qaf/",
     "predeploy": "yarn examples",
     "deploy": "gh-pages -d build"
   },
