--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "comma-dangle": [2, "never"],
     "function-paren-newline": 0,
     "implicit-arrow-linebreak": 0,
+    "import/no-extraneous-dependencies": [0, { "devDependencies": true }],
     "no-confusing-arrow": 0,
     "no-nested-ternary": 0,
     "object-curly-newline": 0,
