--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "react": ">=16.3.0"
   },
   "devDependencies": {
+    "@types/enzyme": "3.1.11",
+    "@types/jest": "23.1.3",
+    "@types/react": "16.4.6",
+    "@types/react-dom": "16.0.6",
+    "@types/react-test-renderer": "16.0.1",
     "babel-eslint": "8.2.5",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-es2015": "6.24.1",
