--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "babel-preset-stage-0": "6.24.1",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
-    "eslint": "5.0.1",
+    "eslint": "5.1.0",
     "eslint-config-airbnb": "17.0.0",
     "eslint-plugin-import": "2.13.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-jsx-a11y": "6.1.0",
     "eslint-plugin-react": "7.10.0",
     "gh-pages": "1.2.0",
-    "jest": "23.2.0",
+    "jest": "23.3.0",
     "page": "1.8.6",
     "pagify-it": "0.0.13",
     "parcel-bundler": "1.9.4",
@@ -46,7 +46,7 @@
     "prestart": "rm -rf .cache dev",
     "start": "parcel examples/App/index.html --out-dir dev --open",
     "lint": "eslint src test examples",
-    "test": "jest test",
+    "test": "jest /test",
     "coverage": "yarn test --coverage",
     "postcoverage": "open -a Chrome coverage/lcov-report/index.html",
     "prebuild": "rm -rf lib",
