--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "object-curly-newline": 0,
     "react/jsx-filename-extension": 0,
     "react/jsx-one-expression-per-line": 0,
-    "react/prop-types": 0
+    "react/no-multi-comp": 0,
+    "react/prop-types": [2, { "skipUndeclared": true }]
   }
 }
