--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "license": "MIT",
   "name": "qaf",
   "description": "Components as stores. State management for React based on context.",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "repository": {
@@ -14,27 +14,27 @@
   },
   "devDependencies": {
     "@types/enzyme": "3.1.11",
-    "@types/jest": "23.1.4",
+    "@types/jest": "23.1.6",
     "@types/react": "16.4.6",
     "@types/react-dom": "16.0.6",
     "@types/react-test-renderer": "16.0.1",
-    "babel-eslint": "8.2.5",
+    "babel-eslint": "8.2.6",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
-    "eslint": "5.1.0",
+    "eslint": "~4",
     "eslint-config-airbnb": "17.0.0",
     "eslint-plugin-import": "2.13.0",
-    "eslint-plugin-jsx-a11y": "6.1.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.10.0",
     "gh-pages": "1.2.0",
-    "jest": "23.3.0",
+    "jest": "23.4.1",
     "page": "1.8.6",
     "pagify-it": "0.0.13",
-    "parcel-bundler": "1.9.4",
+    "parcel-bundler": "1.9.6",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-test-renderer": "16.4.1",
