--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "license": "MIT",
   "name": "qaf",
   "description": "Components as stores. State management for React based on context.",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "repository": {
@@ -13,34 +13,34 @@
     "react": ">=16.3.0"
   },
   "devDependencies": {
-    "@types/enzyme": "3.1.11",
-    "@types/jest": "23.1.6",
-    "@types/react": "16.4.6",
-    "@types/react-dom": "16.0.6",
-    "@types/react-test-renderer": "16.0.1",
+    "@types/enzyme": "3.1.13",
+    "@types/jest": "23.3.1",
+    "@types/react": "16.4.11",
+    "@types/react-dom": "16.0.7",
+    "@types/react-test-renderer": "16.0.2",
     "babel-eslint": "8.2.6",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
-    "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "1.1.1",
-    "eslint": "~4",
-    "eslint-config-airbnb": "17.0.0",
-    "eslint-plugin-import": "2.13.0",
+    "enzyme": "3.4.4",
+    "enzyme-adapter-react-16": "1.2.0",
+    "eslint": "5.4.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.10.0",
+    "eslint-plugin-react": "7.11.1",
     "gh-pages": "1.2.0",
-    "jest": "23.4.1",
+    "jest": "23.5.0",
     "page": "1.8.6",
     "pagify-it": "0.0.13",
-    "parcel-bundler": "1.9.6",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
-    "react-test-renderer": "16.4.1",
-    "rollup": "0.62.0",
+    "parcel-bundler": "1.9.7",
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
+    "react-test-renderer": "16.4.2",
+    "rollup": "0.64.1",
     "rollup-plugin-babel": "3.0.7",
-    "styled-components": "3.3.3"
+    "styled-components": "3.4.5"
   },
   "scripts": {
     "prestart": "rm -rf .cache dev",
